<resources>
    <string name="app_name">Barbell</string>
    <string name="email">Email</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="credits_login">©App made by Racheik Studio</string>
    <string name="create_account">Create an account here!</string>
    <string name="have_an_account">I Already have an account.</string>
</resources>